--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       <h2 class="section-title">Experience</h2>
       <div class="cards-grid" style="justify-content:center;">
         <article class="card experience-card" tabindex="0" style="max-width: 600px; text-align: center;">
-          <h3>Tarang Arts</h3>
+          <h3>inGo Electric</h3>
           <p>
             As a Graphic Designer & UI/UX Developer crafting thoughtful and
             engaging visuals. I’ve interned at Tarang Arts, where I focused on
