--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         Creative and detail-oriented designer with a passion for crafting visual identities. Skilled in logos, branding, marketing assets, and UI design across print and digital. Focused on clarity, consistency, and aligning visuals with brand strategy.
       </p>
       <div class="download-cv">
-        <a href="https://drive.google.com/file/d/1xOWUM61o1wNjqJLC5eCFJFYTF2i0uuG0/view?usp=sharing" target="_blank" rel="noopener noreferrer" aria-label="Download CV in new tab">Download CV</a>
+        <a href="https://drive.google.com/file/d/1rsV_ZRw2AXSrAxxJAs3hAZaxqNYQDLBg/view?usp=sharing" target="_blank" rel="noopener noreferrer" aria-label="Download CV in new tab">Download CV</a>
       </div>
     </section>
 
@@ -462,12 +462,12 @@
       <h2 class="section-title">Projects</h2>
       <div class="cards-grid">
         <article class="card" tabindex="0">
-          <img src="Images/BAck.webp" alt="Graphic design work for Damodhar Motor" />
-          <a class="link" href="https://drive.google.com/drive/folders/1mTJwKXzoKi3zDiYqoqwthfL_pc4NowPl?usp=sharing" target="_blank" rel="noopener noreferrer">Click to visit</a>
+          <img src="Images/Graphic Design.png" alt="Graphic design work for Damodhar Motor" />
+          <a class="link" href="https://drive.google.com/file/d/1xOWUM61o1wNjqJLC5eCFJFYTF2i0uuG0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Click to visit</a>
           <div class="title">Graphic Design</div>
         </article>
         <article class="card" tabindex="0">
-          <img src="Images/BAck.webp" alt="UI/UX design work for Tarang Arts" />
+          <img src="Images/UIUX design.png" alt="UI/UX design work for Tarang Arts" />
           <a class="link" href="#" target="_blank" rel="noopener noreferrer">Click to visit</a>
           <div class="title">UI/UX Design</div>
         </article>
@@ -478,11 +478,9 @@
       <h2 class="section-title">Experience</h2>
       <div class="cards-grid" style="justify-content:center;">
         <article class="card experience-card" tabindex="0" style="max-width: 600px; text-align: center;">
-          <h3>inGo Electric</h3>
+          <h3>inGO Electrics pvt ltd</h3>
           <p>
-            As a Graphic Designer & UI/UX Developer crafting thoughtful and
-            engaging visuals. I’ve interned at Tarang Arts, where I focused on
-            graphic and UI/UX design, working on creative digital projects.
+            As a Graphic Designer, Web Designer & Social Media Handler, I craft thoughtful and engaging visuals. I’ve interned at inGo Electrics Pvt Ltd, where I focused on graphic design, web design, and social media handling for platforms like Instagram, working on creative digital projects.
           </p>
           <div class="date">- Internship</div>
         </article>
@@ -504,14 +502,12 @@
 
       <div class="social-icons" role="list" aria-label="Social media links">
         <a href="https://www.linkedin.com/in/ajay-b-v-805922334?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" role="listitem">
-          <img src="Images/LIMKEDIN.png" >
+          <!-- Icon placeholder for LinkedIn -->
+          <img src="Images/LINKEDIN.png" >
         </a>
         <a href="https://www.instagram.com/aj_devil__?igsh=MWt0eWNld2E5NXZ2aA==" target="_blank" rel="noopener noreferrer" aria-label="Instagram" role="listitem">
           <!-- Icon placeholder for Instagram -->
           <img src="Images/INSTAGRAM.png" >
-        </a>
-        <a href="mailto:ajaykumarbv193@gmail.com" aria-label="Send Email" role="listitem">
-         <img src="Images/GMAIL.png" >
         </a>
       </div>
     </section>
