--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         Creative and detail-oriented designer with a passion for crafting visual identities. Skilled in logos, branding, marketing assets, and UI design across print and digital. Focused on clarity, consistency, and aligning visuals with brand strategy.
       </p>
       <div class="download-cv">
-        <a href="https://drive.google.com/file/d/1rsV_ZRw2AXSrAxxJAs3hAZaxqNYQDLBg/view?usp=sharing" target="_blank" rel="noopener noreferrer" aria-label="Download CV in new tab">Download CV</a>
+        <a href="https://drive.google.com/file/d/1xOWUM61o1wNjqJLC5eCFJFYTF2i0uuG0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" aria-label="Download CV in new tab">Download CV</a>
       </div>
     </section>
 
