--- a/index.html
+++ b/index.html
@@ -452,12 +452,12 @@
     <div class="section-subtitle" aria-hidden="true">Experience With</div>
 
     <div class="icon-row" aria-label="Skills icons">
-      <img src="images/CSS.png" alt="CSS icon" />
-      <img src="images/FIGMA.png" alt="Figma icon" />
-      <img src="images/HTML.png" alt="HTML icon" />
-      <img src="images/LR.png" alt="Lightroom icon" />
-      <img src="images/PR.png" alt="Premiere Pro icon" />
-      <img src="images/PS.png" alt="Photoshop icon" />
+      <img src="images/CSS.png"  >
+      <img src="images/FIGMA.png" >
+      <img src="images/HTML.png" >
+      <img src="images/LR.png" >
+      <img src="images/PR.png" >
+      <img src="images/PS.png" >
     <section class="projects-section" id="projects" tabindex="-1">
       <h2 class="section-title">Projects</h2>
       <div class="cards-grid">
