--- a/index.html
+++ b/index.html
@@ -453,22 +453,22 @@
 
     <div class="icon-row" aria-label="Skills icons">
       <img src="Images/CSS.png"  >
-      <img src="Images/FIGMA.png" >
-      <img src="Images/HTML.png" >
-      <img src="Images/LR.png" >
-      <img src="Images/PR.png" >
-      <img src="Images/PS.png" >
+      <img src="Images/FIGMA.png" alt="Figma icon" />
+      <img src="Images/HTML.png" alt="HTML icon" />
+      <img src="Images/LR.png" alt="Lightroom icon" />
+      <img src="Images/PR.png" alt="Premiere Pro icon" />
+      <img src="Images/PS.png" alt="Photoshop icon" />
     <section class="projects-section" id="projects" tabindex="-1">
       <h2 class="section-title">Projects</h2>
       <div class="cards-grid">
         <article class="card" tabindex="0">
-          <img src="Images/Graphic Design.png" alt="Graphic design work for Damodhar Motor" />
-          <a class="link" href="https://drive.google.com/file/d/1xOWUM61o1wNjqJLC5eCFJFYTF2i0uuG0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Click to visit</a>
+          <img src="Images/Graphic Design.png" alt="Graphic design work" />
+          <a class="link" href="https://drive.google.com/drive/folders/1e-bJJVdz6WPxXC9gudbwX_K5-7Bfrsmi?usp=sharing" target="_blank" rel="noopener noreferrer">Click to visit</a>
           <div class="title">Graphic Design</div>
         </article>
         <article class="card" tabindex="0">
-          <img src="Images/UIUX design.png" alt="UI/UX design work for Tarang Arts" />
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer">Click to visit</a>
+          <img src="Images/UIUX design.png" alt="UI/UX design work" />
+          <a class="link" href="https://drive.google.com/drive/folders/1-SFCltYcs-Q0O7ShaA5hKFAJ5cIYqnNP?usp=sharing" target="_blank" rel="noopener noreferrer">Click to visit</a>
           <div class="title">UI/UX Design</div>
         </article>
       </div>
