--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <img src="Images/AJ.png" alt="Logo" style="width: 80px; height: 80px; object-fit: contain;">
       </div>
       <nav aria-label="Primary navigation">
-        <a href="#hero">Home</a>
+        <a href="#home">Home</a>
         <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
