--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         Skilled in logo design, branding, and basic UI design through academic and self-initiated projects.
         Eager to grow, contribute fresh ideas, and align visuals with clear, user-focused strategies.      </p>
       <div class="download-cv">
-        <a href="https://drive.google.com/file/d/1xOWUM61o1wNjqJLC5eCFJFYTF2i0uuG0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" aria-label="Download CV in new tab">Download CV</a>
+        <a href="https://drive.google.com/file/d/1QlPNMGpnPd2saGTXtJD2GAeQogeHG9aE/view?usp=sharing" target="_blank" rel="noopener noreferrer" aria-label="Download CV in new tab">Download CV</a>
       </div>
     </section>
 
